fix footer on mobile devices

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   height: 25vw;
-  padding: 13px 0;
+  padding: 13px 40px;
   position: relative;
   display: flex;
   flex-direction: column;
